@@ -2,3 +2,4 @@ import "./deprecated-cli-check"
 import "./mod-select-gui"
 import "./test-gui"
 import "./auto-start"
+import "./udp-rerun"
